0.2.2
	* Fixes to cabal meta-data
	* Make sure all verion numbers are up to date

0.2.1
	* Added support for closing files
	* Added better time parsing
	* Added CHANGELOG

0.2
	* Initial release