@@ -125,6 +125,9 @@
               <placeholder/>
             </child>
             <child>
+              <placeholder/>
+            </child>
+            <child>
               <object class="GtkLabel" id="label1">
                 <property name="visible">True</property>
                 <property name="can_focus">False</property>
@@ -278,7 +281,7 @@ Right arrow, Down arrow</property>
                 <property name="visible">True</property>
                 <property name="can_focus">False</property>
                 <property name="xalign">0</property>
-                <property name="label" translatable="yes">TAB</property>
+                <property name="label" translatable="yes">Tab</property>
               </object>
               <packing>
                 <property name="left_attach">4</property>
@@ -816,9 +819,6 @@ beween monitors:</property>
                 <property name="top_attach">13</property>
                 <property name="bottom_attach">14</property>
               </packing>
-            </child>
-            <child>
-              <placeholder/>
             </child>
             <child>
               <object class="GtkLabel" id="label51">
