@@ -4,7 +4,7 @@
 ***                               ***
 *************************************
 
-This application is a viewer for PDF based presentations such as those
+This application is a viewer for PDF-based presentations such as those
 generated by Beamer.  Unlike standard PDF viewers it has features
 specifically for presentations such as a visual clock/timer and a
 preview showing the next slide to the person delivering the talk.
@@ -21,7 +21,7 @@ For help with the GUI press the "?" key when the program is running.
 There are a lot of features that may not be immediately obvious so
 please be sure to look at those bits of documentation.
 
-You can also visit the projects home page for example use cases:
+You can also visit the project home page for example use cases:
     http://michaeldadams.org/projects/haskell-pdf-presenter/
 
 ***********
@@ -36,7 +36,7 @@ Features
 - Rendering
   - Slides are pre-rendered in the background
   - Pre-rendered slides are compressed to memory usage is low
-      (e.g., my disseration defense with 95 slides takes only 60MB at max resolution)
+      (e.g., my dissertation defense with 95 slides takes only 60MB at max resolution)
   - slide number or file name until rendered
   - Renders slide close to current slide first (at a rate of two forward per one backward).
   - Cache is filtered and wiped when the screen resizes
@@ -59,7 +59,7 @@ Features
   - Both black and white video mute
 
 - Presenter view
-  - Metadata:
+  - Meta-data:
     - A small progress bar is shown at the bottom while pre-rendering,
       but since pre-rendering is done in the background, the GUI is
       still be responsive and you do not have to wait for
@@ -71,7 +71,7 @@ Features
         - Paused automatically starts on slide forward or back
         - Stopped says stopped until user explicitly changes it
       - Four different modes: count down, count up, 12 hour and 24 hour
-      - Grows to fit size (usefull for session chairs)
+      - Grows to fit size (useful for session chairs)
       - Colors: white, red (warning), purple (overtime)
           Yeah, these colors are a bit strange, but I've chosen them to
           be easily distinguishable even in peripheral vision or at a
@@ -109,8 +109,8 @@ Features
      1:-5:0     (1 hour minus 5 minutes = 55 minutes)
     1.5:0:0     (1.5 hours)
 
-- Keybindings:
-  (Note that the keys are far appart on a Qwerty keyboard and irreversible
+- Key bindings:
+  (Note that the keys are far apart on a Qwerty keyboard and irreversible
   actions (e.g., resetting the timer) all use a modifier key.)
 
   - Help/About dialog: H, ?
